--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api.helpdu",
-  "version": "0.0.0",
+  "name": "helpdu",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
@@ -13,14 +13,13 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "mongoose":"3.8.23",
+    "mongoose":"4.0.1",
     "date-utils":"1.2.16",
     "busboy":"0.2.9",
     "express-session":"1.9.3",
     "passport":"0.2.1",
     "passport-local":"1.0.0",
     "passport-facebook":"1.0.3",
-    "mongoose":"3.8.21",
     "bcrypt":"0.8.0",
     "nodemailer":"1.3.0",
     "moment":"2.9.0",
